welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: not found: value anvance
do{ anvance();} while (estSurBlanc) 
    ^